# Auralis

./: .gitignore  CLAUDE.md  PROJECT_ANALYSIS.md  README.md  audit_report.md  hidden_states_leak_audit.md  kv_cache_leak_audit.md  pyproject.toml  requirements.txt  setup.py  vllm_migration_plan.md
.windsurf/rules/: project.md
docs/: VLLM_COMPATIBILITY_AUDIT.md  auralis_report.md  generation_parameters_audit.md  streaming_audio_analysis.md  vllm_engine_lifecycle_audit.md
docs/advanced/: using-oai-server.md
docs/audits/: conditioning_encoder_grad_leak_audit.md
examples/: gradio_example.py
notebooks/: colab_quickstart.ipynb
src/auralis/: __init__.py
src/auralis/common/definitions/: openai.py  output.py
src/auralis/common/logging/: logger.py
src/auralis/common/metrics/: performance.py
src/auralis/common/scheduling/: two_phase_scheduler.py
src/auralis/core/: tts.py
src/auralis/models/: base.py
src/auralis/models/xttsv2/: XTTSv2.py
src/auralis/models/xttsv2/components/: vllm_mm_gpt.py
src/auralis/models/xttsv2/components/tts/layers/xtts/: hifigan_decoder.py
src/auralis/models/xttsv2/components/vllm/: hidden_state_collector.py
tests/unit/: test_hidden_states_collector_leak.py  test_output_codec_config_import.py  test_package_exports.py  test_project_config.py  test_tts.py  test_vllm_import_audit.py  test_xttsv2_vllm_imports.py
