[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auralis"
version = "0.2.9"
description = "A faster implementation for TTS models, to be used in highly async environments"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Marco Lironi", email = "marcolironi@astramind.ai" },
]
dependencies = [
    # CUDA stack - keep torch and torchaudio pinned together.
    "torch==2.10.0",
    "torchaudio==2.10.0",
    # vLLM - pinned to the current multimodal processor registration API target.
    "vllm==0.19.0",
    # Transformers
    "transformers>=4.56.0,<5",
    "tokenizers>=0.19.0",
    # Audio
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "pyloudnorm>=0.1.1",
    "librosa>=0.10.0",
    # NLP / languages
    "langid>=1.1.6",
    "thinc>=8.3.0",
    "spacy==3.7.5",
    "num2words>=0.5.12",
    "hangul-romanize>=0.1.0",
    "opencc-python-reimplemented>=0.1.7",
    "pypinyin>=0.51.0",
    "unidecode>=1.3.6",
    "cutlet>=0.4.0",
    # Runtime dependencies used by current package imports
    "huggingface-hub>=0.24.0",
    "numpy>=1.26.0",
    "fsspec>=2024.0.0",
    "networkx>=3.0",
    "packaging>=23.0",
    "safetensors>=0.4.0",
    "nvidia-ml-py>=12.0.0",
    # Utilities
    "nest_asyncio>=1.6.0",
    "ipython==7.34.0",
    "aiofiles>=23.0.0",
    "cachetools>=5.3.0",
    "colorama>=0.4.6",
    "einops>=0.7.0",
    "pydantic>=2.0.0",
    "tqdm>=4.66.0",
    "beautifulsoup4>=4.12.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.scripts]
auralis-openai = "auralis.entrypoints.oai_server:main"

[project.optional-dependencies]
server = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.0.0",
    "aiohttp>=3.9.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings>=0.20.0",
    "mkdocstrings-python>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/astramind-ai/Auralis"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
